--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
 		<title>About me</title>
 	</head>
 	<body>
+		<div class="main-page">
 		<h1>This Web Page is About Anvar Abdulsatarov</h1>
 		<p>My name is Anvar Abdulsatarov.
 			Anvar is meant <strong>Brightness and Clearness</strong> from Arabic language.
@@ -32,20 +33,21 @@
 		<h1>My Mood representations:</h1>
 		<div class="images">
 			<div class="box">
-				<img src="" alt="Happy">
+				<img src="img/happy.jpg" alt="Happy">
 				<p>Happy</p>
 			</div>
 			<div class="box">
-				<img src="" alt="Sad">
+				<img src="img/sad.jpg" alt="Sad">
 				<p>Sad</p>
 			</div>
 		</div>
-		<h1>Interestinh about my Neighbors</h1>
+		<h1>Interesting about my Neighbors</h1>
 		<ul>
-			<li></li>
-			<li></li>
+			<li>Aziz, who is sitting on the left side of me, 
+			always says "It would be better if you learn Java" no matter what is happening right now</li>
+			<li>Iroda, who is sitting on the right side of me, is very funny</li>
 		</ul>
-
+	</div>
 		<link rel="stylesheet" href="aboutme-style.css">
 	</body>
 </html>
